--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: '0 2 * * *' # run at 2 AM UTC
 jobs:
-  test-gke:
+  policy-stress-test:
     name: Start Nightly Policy Stress tests
     runs-on: ubuntu-18.04
     steps:
@@ -17,3 +17,43 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: --namespace=test-clusters --image=cilium/cilium-test-dev:${{ steps.vars.outputs.sha_short }} "/usr/local/bin/cilium-test-gke.sh" "docker.io/cilium/cilium:latest" "docker.io/cilium/operator-generic:latest" "docker.io/cilium/hubble-relay:latest" "NightlyPolicyStress"
+  baseline-test:
+    name: Start performance test
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Add namespace object
+        run: |
+          cat <<EOT > cilium.yaml
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: cilium-perf
+          ---
+          EOT
+      - name: Generate Cilium manifests
+        run: |
+          helm version
+          helm template cilium ./install/kubernetes/cilium \
+            --namespace cilium-perf \
+            --set global.disableCriticalPriorityClass=true \
+            --set global.nodeinit.enabled=true \
+            --set nodeinit.reconfigureKubelet=true \
+            --set nodeinit.removeCbrBridge=true \
+            --set global.cni.binPath=/home/kubernetes/bin \
+            --set global.gke.enabled=true \
+            --set config.ipam=kubernetes \
+            --set nodeinit.restartPods=true \
+            --set global.hubble.enabled=true \
+            --set global.prometheus.enabled=true \
+            --set global.operatorPrometheus.enabled=true \
+            --set global.hubble.metrics.enabled="{dns,drop,tcp,flow,port-distribution,icmp,http}" \
+            --set global.nativeRoutingCIDR=NATIVE_CIDR_PLACEHOLDER \
+            | tee -a cilium.yaml
+      - name: Request GKE test cluster
+        uses: docker://quay.io/isovalent/gke-test-cluster-requester:fe34abda190c31680968ba62634c788428d91706
+        env:
+          GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: --namespace=test-clusters --init-manifest=cilium.yaml --image=cilium/hubble-perf-test:latest "/usr/local/bin/run_in_test_cluster.sh" "--prom-name=prom" "--prom-ns=prom" "--duration=30m"
