--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -172,6 +172,9 @@ global:
   # iptablesLockTimeout defines the iptables "--wait" option when invoked from Cilium.
   # iptablesLockTimeout: "5s"
 
+  # ipTablesRandomFully defines the iptables "--random-fully" option when invoked from Cilium.
+  # ipTablesRandomFully: true
+
   # masquerade enables masquerading of traffic leaving the node for
   # destinations outside of the cluster.
   masquerade: true
