--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -477,11 +477,13 @@ spec:
                   path: server.crt
                 - key: tls.key
                   path: server.key
+              optional: true
           - configMap:
               name: hubble-ca-cert
               items:
                 - key: ca.crt
                   path: client-ca.crt
+              optional: true
 {{- end}}
   updateStrategy:
     rollingUpdate:
