helm: Add K8s Job and CronJob for Hubble mTLS certificate (re)generation
Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/install/kubernetes/cilium/charts/hubble-tls/templates/secret.yaml
+++ b/install/kubernetes/cilium/charts/hubble-tls/templates/secret.yaml
@@ -1,4 +1,7 @@
 {{- if and (.Values.global.hubble.enabled) (.Values.global.hubble.listenAddress) (.Values.global.hubble.tls.enabled) }}
+{{- $hubbleTLSAutoHelm := and .Values.global.hubble.tls.auto.enabled (eq .Values.global.hubble.tls.auto.method "helm") -}}
+{{- $hubbleTLSAutoCronJob := and .Values.global.hubble.tls.auto.enabled (eq .Values.global.hubble.tls.auto.method "cronJob") -}}
+{{- if or $hubbleTLSAutoHelm .Values.ca.crt }}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -6,12 +9,28 @@ metadata:
   name: hubble-ca-cert
   namespace: {{ .Release.Namespace }}
 data:
-{{- if and (.Values.global.hubble.tls.auto.enabled) (eq .Values.global.hubble.tls.auto.method "helm") }}
+{{- if $hubbleTLSAutoHelm }}
 {{ include "ca.gen-cert-only" . | indent 2 }}
 {{- else }}
   ca.crt: |-
 {{ .Values.ca.crt | b64dec | indent 4 -}}
 {{- end }}
+{{- end }}
+{{- $hubbleCAKeypairProvided := and .Values.ca.crt .Values.ca.key -}}
+{{- if and $hubbleTLSAutoCronJob $hubbleCAKeypairProvided }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: hubble-ca-secret
+  namespace: {{ .Release.Namespace }}
+type: kubernetes.io/tls
+data:
+  tls.crt: {{ .Values.ca.crt }}
+  tls.key: {{ .Values.ca.key }}
+{{- end }}
+{{- $hubbleServerKeypairProvided := and .Values.server.crt .Values.server.key -}}
+{{- if or $hubbleTLSAutoHelm $hubbleServerKeypairProvided }}
 ---
 apiVersion: v1
 kind: Secret
@@ -20,13 +39,15 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/tls
 data:
-{{- if and (.Values.global.hubble.tls.auto.enabled) (eq .Values.global.hubble.tls.auto.method "helm") }}
+{{- if $hubbleTLSAutoHelm }}
 {{ include "server.gen-certs" . | indent 2 }}
 {{- else }}
   tls.crt: {{ .Values.server.crt }}
   tls.key: {{ .Values.server.key }}
 {{- end }}
-{{- if .Values.global.hubble.relay.enabled }}
+{{- end }}
+{{- $hubbleRelayClientKeypairProvided := and .Values.relay.client.crt .Values.relay.client.key -}}
+{{- if and .Values.global.hubble.relay.enabled (or $hubbleTLSAutoHelm $hubbleRelayClientKeypairProvided) }}
 ---
 apiVersion: v1
 kind: Secret
@@ -35,14 +56,16 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/tls
 data:
-{{- if and (.Values.global.hubble.tls.auto.enabled) (eq .Values.global.hubble.tls.auto.method "helm") }}
+{{- if $hubbleTLSAutoHelm }}
 {{ include "relay.gen-certs" . | indent 2 }}
 {{- else }}
   tls.crt: {{ .Values.relay.client.crt }}
   tls.key: {{ .Values.relay.client.key }}
 {{- end }}
 {{- end }}
-{{- if .Values.global.hubble.relay.tls.enabled }}
+{{- $hubbleRelayServerKeypairProvided := and .Values.relay.server.crt .Values.relay.server.key -}}
+{{- $hubbleRelayServerTLSEnabled := and .Values.global.hubble.relay.enabled .Values.global.hubble.relay.tls.enabled -}}
+{{- if and $hubbleRelayServerTLSEnabled (or $hubbleTLSAutoHelm $hubbleRelayServerKeypairProvided) }}
 ---
 apiVersion: v1
 kind: Secret
@@ -51,7 +74,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/tls
 data:
-{{- if and (.Values.global.hubble.tls.auto.enabled) (eq .Values.global.hubble.tls.auto.method "helm") }}
+{{- if $hubbleTLSAutoHelm }}
 {{ include "relay.gen-certs" . | indent 2 }}
 {{- else }}
   tls.crt: {{ .Values.relay.server.crt }}
