helm: Enable Hubble mTLS in experimental-install.yaml
Signed-off-by: Sebastian Wicki <sebastian@isovalent.com>

--- a/install/kubernetes/experimental-install.yaml
+++ b/install/kubernetes/experimental-install.yaml
@@ -13,6 +13,13 @@ metadata:
   name: hubble-relay
   namespace: kube-system
 ---
+# Source: cilium/charts/hubble-tls/templates/serviceaccount.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: hubble-generate-certs-sa
+  namespace: kube-system
+---
 # Source: cilium/charts/hubble-ui/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -156,7 +163,10 @@ data:
     http
   # An additional address for Hubble server to listen to (e.g. ":4244").
   hubble-listen-address: ":4244"
-  hubble-disable-tls: "true"
+  hubble-disable-tls: "false"
+  hubble-tls-cert-file: /var/lib/cilium/tls/hubble/server.crt
+  hubble-tls-key-file: /var/lib/cilium/tls/hubble/server.key
+  hubble-tls-client-ca-files: /var/lib/cilium/tls/hubble/client-ca.crt
   ipam: "cluster-pool"
   cluster-pool-ipv4-cidr: "10.0.0.0/8"
   cluster-pool-ipv4-mask-size: "24"
@@ -172,7 +182,9 @@ data:
   config.yaml: |
     peer-service: unix:///var/run/cilium/hubble.sock
     listen-address: :4245
-    disable-client-tls: true
+    tls-client-cert-file: /var/lib/hubble-relay/tls/client.crt
+    tls-client-key-file: /var/lib/hubble-relay/tls/client.key
+    tls-hubble-server-ca-files: /var/lib/hubble-relay/tls/hubble-server-ca.crt
     disable-server-tls: true
 ---
 # Source: cilium/charts/hubble-ui/templates/configmap.yaml
@@ -343,6 +355,21 @@ rules:
   verbs:
   - '*'
 ---
+# Source: cilium/charts/hubble-tls/templates/clusterrole.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: hubble-generate-certs
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+      - configmaps
+    verbs:
+      - create
+      - update
+---
 # Source: cilium/charts/hubble-ui/templates/clusterrole.yaml
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -490,6 +517,20 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: cilium
+  namespace: kube-system
+---
+# Source: cilium/charts/hubble-tls/templates/clusterrolebinding.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: hubble-generate-certs
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: hubble-generate-certs
+subjects:
+- kind: ServiceAccount
+  name: hubble-generate-certs-sa
   namespace: kube-system
 ---
 # Source: cilium/charts/hubble-ui/templates/clusterrolebinding.yaml
@@ -725,6 +766,9 @@ spec:
           readOnly: true
         - mountPath: /run/xtables.lock
           name: xtables-lock
+        - mountPath: /var/lib/cilium/tls/hubble
+          name: hubble-tls
+          readOnly: true
       hostNetwork: true
       initContainers:
       - command:
@@ -813,6 +857,23 @@ spec:
       - configMap:
           name: cilium-config
         name: cilium-config-path
+      - name: hubble-tls
+        projected:
+          sources:
+          - secret:
+              name: hubble-server-certs
+              items:
+                - key: tls.crt
+                  path: server.crt
+                - key: tls.key
+                  path: server.key
+              optional: true
+          - configMap:
+              name: hubble-ca-cert
+              items:
+                - key: ca.crt
+                  path: client-ca.crt
+              optional: true
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 2
@@ -872,6 +933,9 @@ spec:
           - mountPath: /etc/hubble-relay
             name: config
             readOnly: true
+          - mountPath: /var/lib/hubble-relay/tls
+            name: tls
+            readOnly: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 0
       volumes:
@@ -885,6 +949,21 @@ spec:
           path: /var/run/cilium
           type: Directory
         name: hubble-sock-dir
+      - projected:
+          sources:
+          - secret:
+              name: hubble-relay-client-certs
+              items:
+                - key: tls.crt
+                  path: client.crt
+                - key: tls.key
+                  path: client.key
+          - configMap:
+              name: hubble-ca-cert
+              items:
+                - key: ca.crt
+                  path: hubble-server-ca.crt
+        name: tls
 ---
 # Source: cilium/charts/hubble-ui/templates/deployment.yaml
 kind: Deployment
@@ -1044,3 +1123,91 @@ spec:
       - configMap:
           name: cilium-config
         name: cilium-config-path
+---
+# Source: cilium/charts/hubble-tls/templates/job.yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: hubble-generate-certs
+  namespace: kube-system
+  labels:
+    k8s-app: hubble-tls
+spec:
+  template:
+    metadata:
+      labels:
+        k8s-app: hubble-tls
+    spec:
+      serviceAccount: hubble-generate-certs-sa
+      serviceAccountName: hubble-generate-certs-sa
+      containers:
+        - name: certgen
+          image: "docker.io/cilium/certgen"
+          imagePullPolicy: Always
+          command:
+            - "/usr/bin/cilium-certgen"
+          args:
+            - "--hubble-ca-generate=true"
+            - "--hubble-ca-validity-duration=94608000s"
+            - "--hubble-ca-config-map-name=hubble-ca-cert"
+            - "--hubble-ca-config-map-namespace=kube-system"
+            - "--hubble-server-cert-generate=true"
+            - "--hubble-server-cert-validity-duration=94608000s"
+            - "--hubble-server-cert-secret-name=hubble-server-certs"
+            - "--hubble-server-cert-secret-namespace=kube-system"
+            - "--hubble-relay-client-cert-generate=true"
+            - "--hubble-relay-client-cert-validity-duration=94608000s"
+            - "--hubble-relay-client-cert-secret-name=hubble-relay-client-certs"
+            - "--hubble-relay-client-cert-secret-namespace=kube-system"
+            - "--hubble-relay-server-cert-generate=false"
+          volumeMounts:
+      hostNetwork: true
+      restartPolicy: OnFailure
+      volumes:
+  ttlSecondsAfterFinished: 1800
+---
+# Source: cilium/charts/hubble-tls/templates/cronjob.yaml
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: hubble-generate-certs
+  namespace: kube-system
+  labels:
+    k8s-app: hubble-tls
+spec:
+  schedule: "0 0 1 */4 *"
+  concurrencyPolicy: Forbid
+  jobTemplate:
+    spec:
+      template:
+        metadata:
+          labels:
+            k8s-app: hubble-tls
+        spec:
+          serviceAccount: hubble-generate-certs-sa
+          serviceAccountName: hubble-generate-certs-sa
+          containers:
+            - name: certgen
+              image: "docker.io/cilium/certgen"
+              imagePullPolicy: Always
+              command:
+                - "/usr/bin/cilium-certgen"
+              args:
+                - "--hubble-ca-generate=true"
+                - "--hubble-ca-validity-duration=94608000s"
+                - "--hubble-ca-config-map-name=hubble-ca-cert"
+                - "--hubble-ca-config-map-namespace=kube-system"
+                - "--hubble-server-cert-generate=true"
+                - "--hubble-server-cert-validity-duration=94608000s"
+                - "--hubble-server-cert-secret-name=hubble-server-certs"
+                - "--hubble-server-cert-secret-namespace=kube-system"
+                - "--hubble-relay-client-cert-generate=true"
+                - "--hubble-relay-client-cert-validity-duration=94608000s"
+                - "--hubble-relay-client-cert-secret-name=hubble-relay-client-certs"
+                - "--hubble-relay-client-cert-secret-namespace=kube-system"
+                - "--hubble-relay-server-cert-generate=false"
+              volumeMounts:
+          hostNetwork: true
+          restartPolicy: OnFailure
+          volumes:
+      ttlSecondsAfterFinished: 1800
